--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,7 @@
   "name": "LSReports",
   "description": "Compare Grant Reports across Legal Server and Excel.",
   "version": "1.0",
+  "author": "aconstas",
   "action": {
     "default_popup": "index.html"
   },
@@ -10,5 +11,15 @@
     "16": "favicon-16x16.png",
     "32": "favicon-32x32.png",
     "128": "favicon-128x128.png"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://aaaj.legalserver.org/report/*"],
+      "js": ["content-script.js"]
+    }
+  ],
+  "permissions": [
+    "activeTab",
+    "tabs"
+  ]
 }
